# proverbot9001

./: .gitignore  .gitmodules  .test.sh  .travis.yml  Coqgym task creation notes.txt  LinearizeRegression.v  Makefile  README.md  TODO.md  archive-reports.sh  beta.txt  build_coq_projects.sh  build_coqgym_test.sh  common_paths.txt  compcert-scrapable-files.txt  compcert-test-files.txt  compcert-train-files.txt  compcert_linearizer_failures.py  compcert_projs_splits.json  context_filter.py  coq.cfg  coq.py  coq.test.cfg  coq_keywords.txt  coqgym_projs_splits.json  coqgym_test_split.json  coqide  darknet-changes.patch  darknet-rnn-predictor.sh  data.py  details.css  details.js  docker-compose.yml  dockerfile  encclass_predictor.py  encdecrnn_predictor.py  error_messages.txt  fix_proof_using_linearized.sh  format.py  full-run.sh  (+57 more)
.devcontainer/: devcontainer.json
analysis/: confusion_matrix.py  context_filter.py  data.py  format.py  get_contexts_by_tactic.py  mypy.ini  nmf.py  percentage-pass.py  plot_scatter_points.py  report_csv.py  serapi_instance.py  tactic_distribution.py  tokenizer.py  util.py
bench/: add_bench.sh  completed-files.sh  get_bench_files.sh  report_bench.sh  retreive_bench.sh  scrape_bench.sh  skip_linearize.sh  split_files.sh
coq-projects/: CompCert
data/: compcert-scrapable-files.txt  compcert-test-files.txt  compcert-train-files.txt  coq-projects-demo-files.txt  coq-projects-test-files.txt  coq-projects-train-files.txt  coq-projects-valid-files.txt  (+5 more)
dataloader/: Cargo.toml  dataloader.pyi
dataloader/dataloader-core/: Cargo.toml  dataloader.pyi  pyproject.toml  wherearegoals
dataloader/dataloader-core/src/: context_filter.rs  context_filter_parser.lalrpop  features.rs  lib.rs  paren_util.rs  scraped_data.rs  tokenizer.rs  trie.rs
dataloader/dataloader-core/src/models/: features_dnn_evaluator.rs  features_polyarg_predictor.rs  goal_enc_evaluator.rs  mod.rs
dataloader/src/: context_filter.rs  context_filter_ast.rs  features.rs  lib.rs  paren_util.rs  scraped_data.rs  tokenizer.rs
dataloader/src/models/: evaluator_common.rs  features_dnn_evaluator.rs  features_polyarg_predictor.rs  goal_enc_evaluator.rs  mod.rs
(+1669 files in other folders)
