[package]
name = "dataloader"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dataloader"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
edit-distance = "*"
rayon = "*"
regex = "*"
lazy_static = "*"
rand = "0.7.3"
lalrpop-util = "0.19.0"
bincode = "*"
gestalt_ratio = { path = "../gestalt-ratio" }

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }
