[package]
name = "dataloader"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dataloader"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
edit-distance = "*"
rayon = "*"
regex = "*"
lazy_static = "*"
rand = "0.7.3"
lalrpop-util = "0.19.0"
bincode = "*"
indicatif = {version = "*", features = ["rayon"]}
gestalt_ratio = { path = "../gestalt-ratio" }
itertools = "0.10.5"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }
